[package]
name = "loglib"
version = "0.5.0"
edition = "2021"
authors = ["jcuk3ng <у.меня@её.нет>"]
description = "Кроссплатформенная библиотека логгирования"
license = "MIT"

[dependencies]
once_cell = "1.19"
chrono = { version = "0.4", features = ["clock"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "7.0"

[target.'cfg(target_os = "windows")'.dependencies]
winlog-rs = { path = "../winlog-rust" }